# woody_woodpacker

./: .gitignore  CMakeLists.txt  README.md  hello_main.c  library.c  library.h  main.c  notes.md  test
Notes/: elf.md
includes/: elf.h  linux_elf-em.h  linux_types.h  packer.h
resources/: hello
src/: check_elf_header.c  debug.c  file_io.c  library.c
